updated the manual

--- a/dump_man.html
+++ b/dump_man.html
@@ -31,7 +31,7 @@ p {
 	width: fit-content;
 }
 ._f_dtl ._f_l {
-	margin-right: 2rem;
+	
 }
 ._f_l {
 	font: 700 1.2rem Courier;
@@ -39,7 +39,7 @@ p {
 	min-width: 1rem;
 }
 ._f_dscrp {
-
+	margin-left: 2rem;
 }
 </style>
 </head>
@@ -73,7 +73,7 @@ p {
 			<p class="_f_dtl"><span class="_f_l">n</span>		<span class="_f_dscrp">the argument immediatly after is treated as the input.</span></p>
 			<p class="_f_dtl"><span class="_f_l">f</span>		<span class="_f_dscrp">the argument immediatly after is treated as the path of a file that contains the input.</span></p>
 			<p class="_f_dtl"><span class="_f_l">l</span>		<span class="_f_dscrp">the argument immediatly after is the length of number per line (files only).</span></p>
-			<p class="_f_dtl"><span class="_f_l">v</span>		<span class="_f_dscrp">Normally <span class="_c">dumps</span> does its work silently. The v (verbose) option cause it to prints details about the output.</span></p>
+			<p class="_f_dtl"><span class="_f_l">v</span>		<span class="_f_dscrp">Normally <span class="_c">dump</span> does its work silently. The <span class="_f_l">v</span> (verbose) option cause it to prints details about the output.</span></p>
 		</div>
 
 		<p>
