--- a/dump_man.html
+++ b/dump_man.html
@@ -75,7 +75,7 @@ body {
 			In the letter(s) defining the base first letter is treated as the input base and
 			if the letter immediatly after that defines a base then it is treated as
 			the output base. If output base is not defined in case of numbers it prints
-			the number in all the other basis, in case of file binary is choosen.
+			the number in all the other bases, in case of file binary is choosen.
 		</p>
 	
 		<p>
