--- a/dump_man.html
+++ b/dump_man.html
@@ -61,7 +61,8 @@ body {
 			the first argument. The function letters defines:
 		</p>
 	
-		<div class="_sub"><p class="_f_dtl"><span class="_f_l">b</span>		<span class="_f_dscrp">binary</span></p>
+		<div class="_sub">
+			<p class="_f_dtl"><span class="_f_l">b</span>		<span class="_f_dscrp">binary</span></p>
 			<p class="_f_dtl"><span class="_f_l">i</span>		<span class="_f_dscrp">integers</span></p>
 			<p class="_f_dtl"><span class="_f_l">h</span>		<span class="_f_dscrp">hexadecimals</span></p>
 			<p class="_f_dtl"><span class="_f_l">o</span>		<span class="_f_dscrp">octals</span></p>
